--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ increase or decrease the speed of balls and also can pause the screen saver. for
           <div class="col-md-7">
           <div class="contact-form">
             <h2 class="featurette-heading" style=""> Get in touch <span class="text-muted"></span></h2>
-            <form id = "contact-form" method = "post" action="contact-form-handler.php">
+            <form id = "contact-form" method = "post" action="mail.php">
               <input name="name" type="text" class="form" placeholder="Your Name" required><br>
                <input name="email" type="text" class="form" placeholder="Your Email" required><br>
                <textarea name="message" class="form" placeholder="message" row="4" required></textarea><br>
