--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>MAyank S</title>
+    <title>MAyank SinGh</title>
     <link rel="stylesheet" type="text/css" href="style1.css">
     <link rel="stylesheet" type="text/css" href="animate.css">
         <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -114,7 +114,7 @@
           <div class="col-md-7">
             <h2 class="featurette-heading" style="margin-top:0">Education. <span class="text-muted">Currently studying.</span></h2>
             <p class="lead">Pursuing B.Tech in Computer Science and Engineering from IIT Jammu</p>
-                <p><a class="btn btn-lg btn-primary" href="img/Mayank.pdf" role="button">My Resume</a></p>
+                <p><a class="btn btn-lg btn-primary" href="img/MayankCV!.pdf" role="button">My Resume</a></p>
             
           </div>
           <div class="col-md-5">
@@ -183,6 +183,40 @@
         </div>
         <div class="row no-gutters">
           <div class="col-lg-6">
+            <a class="portfolio-item" href="https://github.com/mayanksingh1998/RoBoWarz-Multiplayer-Game">
+              <span class="caption">
+                <span class="caption-content">
+                  <h2>RoboWarZ-A Multiplayer game </h2>
+                  <p class="mb-0">It's a multiplayer game similar to famous game pocket tanks which can be played online between many players over a network</p>
+                </span>
+              </span>
+              <img class="img-fluid" src="img/game.jpg" alt="">
+            </a>
+          </div>
+          <div class="col-lg-6">
+            <a class="portfolio-item" href="https://github.com/mayanksingh1998/Pipeline-Arm-Simulator">
+              <span class="caption">
+                <span class="caption-content">
+                  <h2>Pipeline-ARM Simulaor</h2>
+                <p class="mb-0">     It is a programme in which u just have to provide the AC circuit in the form of NETLIST (code) and it will draw the SVG image of the circuit and will solve the AC-circuit accordingly.  </p>
+                </span>
+              </span>
+              <img class="img-fluid" src="img/arm2.png" alt="">
+            </a>
+          </div>
+          <div class="col-lg-6">
+            <a class="portfolio-item" href="https://github.com/mayanksingh1998/lift-controlling-system">
+              <span class="caption">
+                <span class="caption-content">
+                  <h2>Lift Controller</h2>
+                  <p class="mb-0">It is a controlling system which can operate on 2 lifts with 4 floors. If someone calls a lift by pressing button provided on every floor the lift close to that floor will come. For more information click here  </p>
+
+                </span>
+              </span>
+              <img class="img-fluid" src="img/li.v1.cropped.jpg" alt="">
+            </a>
+          </div>
+          <div class="col-lg-6">
             <a class="portfolio-item" href="https://github.com/mayanksingh1998/3D-Balls-screen-saver">
               <span class="caption">
                 <span class="caption-content">
@@ -192,39 +226,6 @@ increase or decrease the speed of balls and also can pause the screen saver. for
                 </span>
               </span>
               <img class="img-fluid" src="img/ball.jpg" alt="">
-            </a>
-          </div>
-          <div class="col-lg-6">
-            <a class="portfolio-item" href="https://github.com/mayanksingh1998/lift-controlling-system">
-              <span class="caption">
-                <span class="caption-content">
-                  <h2>Lift Controller</h2>
-                <p class="mb-0">It is a controlling system which can operate on 2 lifts with 4 floors. If someone calls a lift by pressing button provided on every floor the lift close to that floor will come. For more information click here  </p>
-                </span>
-              </span>
-              <img class="img-fluid" src="img/li.v1.cropped.jpg" alt="">
-            </a>
-          </div>
-          <div class="col-lg-6">
-            <a class="portfolio-item" href="https://github.com/mayanksingh1998/music_player_app">
-              <span class="caption">
-                <span class="caption-content">
-                  <h2>Music Player app</h2>
-                  <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
-                </span>
-              </span>
-              <img class="img-fluid" src="img/music.png" alt="">
-            </a>
-          </div>
-          <div class="col-lg-6">
-            <a class="portfolio-item" href="https://github.com/mayanksingh1998">
-              <span class="caption">
-                <span class="caption-content">
-                  <h2>Many Data Structures and VHDL Projects</h2>
-                  <p class="mb-0">Some of my projects on Data Structures and VHDL.</p>
-                </span>
-              </span>
-              <img class="img-fluid" src="img/work.png" alt="">
             </a>
           </div>
         </div>
